styles.css
/* ### CUSTOM PROPERTIES ### */

:root {
  /* # PRIMARY # */
  --purple-500: hsl(259, 100%, 65%);
  --red-400: hsl(0, 100%, 67%);

  /* # NEUTRAL # */
  --white: hsl(0, 100%, 100%);
  --grey-100: hsl(0, 0%, 94%);
  --grey-200: hsl(0, 0%, 86%);
  --grey-500: hsl(0, 1%, 44%);
  --black: hsl(0, 0%, 0%);

  /* # TYPOGRAPHY # */
  --ff-poppins: "Poppins", sans-serif;
  --fw-400i: 400;
  --fw-700: 700;
  --fw-800i: 800;
}

/* ### CSS RESET ### */

*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}

img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

input,
button,
textarea,
select {
  font: inherit;
}

/* # HIDE ARROWS FROM INPUT NUMBER # */

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type="number"] {
  -moz-appearance: textfield;
}

/* ### UTILITY CLASSES ### */

.text-accent {
  color: var(--purple-500);
}

.text-error-accent {
  color: var(--red-400);
}

.hide {
  display: none;
}

.error-message {
  font-size: 0.685rem;
  color: var(--red-400);
  font-style: italic;
  font-weight: var(--fw-400i);
  /* margin-top: 0.5rem; */
}

/* ### GENERAL STYLING ### */

body {
  font-family: var(--ff-poppins);
  background-color: var(--grey-100);
}

main {
  min-height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 1rem;
}

/* ### AGE CALCULATOR APP ### */

.age-calculator {
  max-width: 475px;
  background-color: var(--white);
  color: var(--black);
  border-radius: 1.4rem;
  border-end-end-radius: 5rem;
  padding: 3rem 1.5rem 2rem;
}

.age-calculator form {
  position: relative;
  z-index: 1;
}

.age-calculator label {
  color: var(--grey-500);
  font-weight: var(--fw-700);
  text-transform: uppercase;
  letter-spacing: 2px;
  font-size: 0.8rem;
}

.age-calculator input {
  width: 100%;
  padding: 0.5rem 0.8rem;
  border: 1px solid var(--grey-200);
  border-radius: 0.4rem;
  color: var(--black);
  font-weight: var(--fw-700);
  font-size: 1.135rem;
  caret-color: var(--purple-500);
}

.age-calculator input:focus {
  outline: 2px solid var(--purple-500);
}

.age-calculator input:hover,
.age-calculator input:active {
  border-color: var(--purple-500);

  cursor: pointer;
}

.input-container {
  display: grid;
  gap: 0.4rem;
}

.age-calculator .grid {
  display: grid;
  gap: 1rem;
  grid-template-columns: repeat(3, 1fr);
}

.age-calculator button {
  background-color: var(--purple-500);
  border: none;
  border-radius: 200px;
  box-sizing: content-box;
  width: 55px;
  height: 55px;
  display: grid;
  place-items: center;
  padding: unset;
  margin-top: 1.5rem;
  margin-inline: auto;
  cursor: pointer;
}

.age-calculator button:hover {
  background-color: var(--black);
}

.age-calculator form:before {
  content: "";
  display: inline-block;
  width: 100%;
  height: 2px;
  background-color: var(--grey-100);
  position: absolute;
  bottom: 23px;
  z-index: -1;
}

.age-calculator button img {
  width: 45%;
}

.age-calculator__display {
  margin-top: 2rem;
  font-size: 3rem;
  font-weight: var(--fw-800i);
  font-style: italic;
  line-height: 1.2;
}

.age-calculator__display p {
  display: flex;
  gap: 0.8rem;
}

/* ### MEDIA QUERIES ### */

@media (min-width: 68.75em) {
  .age-calculator {
    max-width: 580px;
    padding: 2.5rem 2.5rem 2rem;
    border-radius: 1rem;
    border-end-end-radius: 10rem;
  }

  .grid {
    max-width: 80%;
  }

  .age-calculator input {
    font-size: 1.275rem;
  }

  .age-calculator button {
    margin-inline-end: 0;
    width: 65px;
    height: 65px;
    margin-top: 0;
  }

  .age-calculator button img {
    width: 50%;
  }

  .age-calculator form:before {
    bottom: 21%;
  }

  .age-calculator__display {
    margin-top: 0;
    font-size: 4rem;
  }
}

